# Qt_IPC_example

./: CMakeLists.txt  README.md  test.py
src/: build.py  configure.py  datastreamer.h  datastreamer.sip  main.cpp  process_example.cpp  process_example.h
